frame/support/test/tests/benchmark_ui/missing_origin.stderr
error: Single-item extrinsic calls must specify their origin as the first argument.
  --> tests/benchmark_ui/missing_origin.rs:12:3
   |
12 |         thing();
   |         ^^^^^
